# duckdb-deltatable-extension

./: .cirrus.yml  .gitignore  .gitmodules  .gitpod.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakeUserPresets.json  Cargo.toml  Makefile  README.md  build.rs  function.cmake  populate.py  renovate.json  rust-toolchain.toml  wrapper.c
.cargo/: config
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml  cirrus.yml  cmake.yml  docs.yml  jekyll-gh-pages.yml
_site/: netlify.toml
duckdb-cxx/: Cargo.toml  build.rs  run.fish
duckdb-cxx/src/: RustCreateFunctionInfo.cpp  RustCreateFunctionInfo.h  defs.rs  lib.rs  macros.rs  wrapper.cpp  wrapper.hpp
duckdb-extension-framework/: Cargo.toml  build.rs
duckdb-extension-framework/src/: bind_info.rs  connection.rs  constants.rs  data_chunk.rs  database.rs  duckly.rs  error.rs  function_info.rs  init_info.rs  lib.rs  logical_type.rs  table_function.rs  value.rs  vector.rs
netlify/edge-functions/: index.js
netlify/functions/: index.js  index.mts
populate/: Cargo.toml
populate/src/: main.rs
src/: constants.rs  deltatable_extension.cpp  duckly.rs  error.rs  lib.rs  strings.rs  table_function.rs  types.rs  wrapper.c  wrapper.h
src/include/: deltatable_extension.hpp
src/structs/: bind_info.rs  connection.rs  data_chunk.rs  function_info.rs  logical_type.rs  mod.rs  table_function.rs  value.rs  vector.rs
test/simple_table/: 0-49ed9201-a421-42a0-b5fe-e2ab1a9f57ee-0.parquet
test/sql/: test.test  test_with_list.test
