[package]
name = "duckdb-deltatable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltalake = { version = "0.16.5", features = ['parquet'], default-features = false }
tokio = { version = "1.35.1", features=['rt'], default-features = false }
parquet = { version = "49.0.0", features=["snap", "brotli", "flate2", "lz4", "zstd", "base64"], default-features = false }
lazy_static = "1.4.0"
duckdb = { version = "0.9.2", features=['vtab'] }
duckdb-loadable-macros = "0.1.0"

[workspace]
members = [
    "populate",
]

[lib]
name = "deltatable"
crate-type = ["staticlib"]
