[package]
name = "duckdb-deltatable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltalake = { version = "0.16.5", features = ["arrow", 'parquet'], default-features = false }
tokio = { version = "1.37.0", features=['rt'], default-features = false }
parquet = { version = "50.0.0", features=["snap", "brotli", "flate2", "lz4", "zstd", "base64"], default-features = false }
lazy_static = "1.4.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
duckdb = { version = "0.10.1", features=['vtab'] }
duckdb-loadable-macros = "0.1.1"
argparse-rs = "0.1.0"

[[bin]]
name = "populate"

[lib]
name = "deltatable"
crate-type = ["staticlib"]
