[package]
name = "duckdb-extension-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
num-derive = "0.3.3"

[build-dependencies]
bindgen = "0.60.1"
build_script = "0.2.0"
